# sensitive_content_detect

./: .gitignore  Cargo.toml  README.md
conf/: app.conf
data/: dict.txt
src/: app.rs  lib.rs
src/base/: error.rs
src/core/: mod.rs  sensitive_check_core.rs
src/handlers/: healthz_handler.rs  mod.rs  sensitive_detect_handler.rs
src/init/: app_init.rs  log_init.rs  map_init.rs  mod.rs  server_init.rs
src/model/: mod.rs  sensitive_word.rs
src/response/: mod.rs
src/routers/: mod.rs
src/utils/: mod.rs  sensitive_process.rs
