[package]
name = "sensitive_detect_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.18", features = ["headers"]}
axum-macros = "0.3.4"
axum-extra = "0.5.0"
color-eyre = "0.6.2"
futures = "0.3.8"
lazy_static = "1.4.0"
reqwest = { version = "0.11.13", features = ["json", "cookies"]}
serde = { version = "1.0.142", features = ["derive"] }
serde_json = "1.0.85"
time = { version = "0.3", features = ["formatting", "macros"] }
tokio = { version = "1.20.1", features = ["full"] }
tower-http = { version = "0.3.5", features = ["cors"]}
tracing = "0.1.36"
tracing-error = "0.2.0"
tracing-log = "0.1.2"
tracing-subscriber = { version = "0.3.15", features = ["local-time", "env-filter"] }
tracing-appender = "0.2"

[[bin]]
name = "sensitive_detect_server"
path = "src/app.rs"
